--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -15,6 +15,9 @@
 .icon-chart-bar:before { content: '\e80d'; } /* '' */
 .icon-calendar:before { content: '\e80e'; } /* '' */
 .icon-search:before { content: '\e80f'; } /* '' */
+.icon-heart-empty:before { content: '\e810'; } /* '' */
+.icon-retweet:before { content: '\e811'; } /* '' */
+.icon-upload:before { content: '\f02f'; } /* '' */
 .icon-bookmark-empty:before { content: '\f097'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
