--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?83520751');
-  src: url('../font/fontello.eot?83520751#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?83520751') format('woff2'),
-       url('../font/fontello.woff?83520751') format('woff'),
-       url('../font/fontello.ttf?83520751') format('truetype'),
-       url('../font/fontello.svg?83520751#fontello') format('svg');
+  src: url('../font/fontello.eot?51023322');
+  src: url('../font/fontello.eot?51023322#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?51023322') format('woff2'),
+       url('../font/fontello.woff?51023322') format('woff'),
+       url('../font/fontello.ttf?51023322') format('truetype'),
+       url('../font/fontello.svg?51023322#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?83520751#fontello') format('svg');
+    src: url('../font/fontello.svg?51023322#fontello') format('svg');
   }
 }
 */
@@ -71,6 +71,9 @@
 .icon-chart-bar:before { content: '\e80d'; } /* '' */
 .icon-calendar:before { content: '\e80e'; } /* '' */
 .icon-search:before { content: '\e80f'; } /* '' */
+.icon-heart-empty:before { content: '\e810'; } /* '' */
+.icon-retweet:before { content: '\e811'; } /* '' */
+.icon-upload:before { content: '\f02f'; } /* '' */
 .icon-bookmark-empty:before { content: '\f097'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
